--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <title>Alexis MATTHEY-VINTAR</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Font awesome icons -->
+        <script
+            src="https://kit.fontawesome.com/45786c4b99.js"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <div id="root"></div>
